crates/plotnik-tests/tests/02-parser/recovery_unexpected/wrong_close_delimiter_inside_sequence.txt
Q = {(a) ] (b)}
------------------ DIAGNOSTICS -------------------
error: unexpected `]` inside this sequence: the matching closer is `}`
 --> query.ptk:1:10
  |
1 | Q = {(a) ] (b)}
  |          ^
  |
help: remove the stray `]`
  |
1 - Q = {(a) ] (b)}
1 + Q = {(a)  (b)}
  |
